[package]
name = "network_listener"
version = "0.1.0"
edition = "2021"
description = "A packet sniffing tool for network traffic analysis and bandwidth estimation."
build = "build.rs"

[[bin]]
name = "network_listener"
path = "src/main.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler/scheduler.rs"

[dependencies]
pnet = "0.35.0"
pcap = "2.2.0"
chrono = "0.4.39"
log = "0.4.25"
env_logger = "0.11.6"
clap = { version = "4.5.29", features = ["derive"] }
fern = "0.7.1"
tokio = { version = "1.42.0", features = ["full"] }
pcap-async = "0.4.1"
libc = "0.2.169"
procfs = "0.17.0"
num-traits = "0.2"
surge-ping = "0.8.1"
rand = "0.9"

# Wifi stuff
rtnetlink = "0.14.1"
neli-wifi = { version = "0.6.0", features = ["async"] }

mac_address = "1.1.8"
# neli = { version = "0.6.4", features = ["async"] }
prost = "0.13"
prost-types = "0.13"
anyhow = "1.0.95"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.64"
tonic = "0.12.3"
futures = "0.3.17"
tokio-util = "0.7"
bytes = "1.10.0"
# Postgres stuff
tokio-postgres = { version="0.7", features=["with-chrono-0_4"] }

[build-dependencies]
tonic-build = "*"
