[package]
name = "network_listener"
version = "0.1.0"
edition = "2021"
description = "A packet sniffing tool for network traffic analysis and bandwidth estimation."
build = "build.rs"

[[bin]]
name = "network_listener"
path = "src/main.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler/scheduler.rs"

[dependencies]
pnet = "0.35.0"
pcap = "2.2.0"
chrono = "0.4.40"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.35", features = ["derive"] }
fern = "0.7.1"
tokio = { version = "1.44.2", features = ["full"] }
pcap-async = "0.4.1"
libc = "0.2.171"
procfs = "0.17.0"
surge-ping = "0.8.2"
rand = "0.9"
yata = "0.7.0"
itertools = "0.14.0"
toml = "0.8.20"
lazy_static = "1.5.0"

# Wifi
neli-wifi = { version = "0.6.0", features = ["async"] }

mac_address = "1.1.8"
prost = "0.13"
prost-types = "0.13"
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tonic = "0.13.0"
futures = "0.3.17"
tokio-util = "0.7"
bytes = "1.10.1"

# Postgres
tokio-postgres = { version="0.7", features=["with-chrono-0_4"] }

[build-dependencies]
tonic-build = "0.13.0"
